--- a/user-import/src/main/resources/content/Language.properties
+++ b/user-import/src/main/resources/content/Language.properties
@@ -21,7 +21,7 @@ error_on_row=Error on row {0} in the CSV file.
 excel-north-europe-pref=EXCEL_NORTH_EUROPE_PREFERENCE
 excel-pref=EXCEL_PREFERENCE
 file-must-be-csv=You have to upload a <strong>CSV</strong> file.<br/>
-first-row-format=For the Users import, the header in the first row must be present and should has the following format:<br/>username{0}email{0}firstName{0}lastName{0}password{0}male{0}jobTitle{0}birthday{0}customField1{0}customField2{0}customField3{0}customField4{0}customField5{0}customField6{0}customField7{0}customField8{0}customField9{0}customField10
+first-row-format=For the Users import, the header in the first row must be present and should has the following format:<br/>username{0}email{0}firstName{0}lastName{0}male{0}jobTitle{0}birthday{0}customField1{0}customField2{0}customField3{0}customField4{0}customField5{0}customField6{0}customField7{0}customField8{0}customField9{0}customField10
 firstname-lastname=First and Last Name
 help-import-type=Select the import operation you want to perform. You can choose between Users and Organizations.
 hide-csv-pref=Hide help on CSV Separator preference
@@ -50,3 +50,5 @@ success-read-and-added={1} rows were read from CSV file. {0} rows imported and c
 tab-pref=TAB_PREFERENCE
 upload=Upload the CSV file
 use-ignore=Ignore field or optional field?
+password-type=Password Type
+password-type-help=For Auto password type liferay generate auto password for user and for Regex it will be screenname+123
